# Auction_Based_consensus_for_crowd_shipping

./: .env  .gitignore  README.md  app.json  babel.config.js  eas.json  google-services.json  package-lock.json  package.json  tsconfig.json
Backend/: auth_dep.py  main.py  matching_auto.py  models.py  routes_assignments.py  routes_auction.py  routes_auth.py  routes_courier.py  routes_devices.py  routes_escrow.py  routes_matching.py  routes_offers.py  routes_poba.py  routes_requests.py  routes_rider.py  routes_sender.py  routes_users.py
Backend/Blockchain/solochain-template/pallets/poba/: Cargo.toml
Backend/Blockchain/solochain-template/pallets/poba/src/: lib.rs
Backend/Database/: db.py
Backend/auction/: clearing_engine.py  ida_star_core.py
Backend/services/: geocoding.py  matching.py  push.py  sms.py
app/: +not-found.tsx  CourierLogin.tsx  CourierSignUp.tsx  SenderLogin.tsx  SenderSignUp.tsx  _layout.tsx  assignment_details.tsx  bucket_list.tsx  courier_home_page.tsx  courier_offer_create.tsx  home.tsx  home_page.tsx  index.tsx  matching-await-driver.tsx  matching-await.tsx  payment_details.tsx  poba-demo.tsx  profile-setup.tsx  request_details.tsx  rider_home_page.tsx  rider_request_create.tsx  role_select.tsx  sender_home_page.tsx  sender_request_create.tsx  wallet-login.tsx
app/components/: AnimatedBgBlobs.tsx  BoxIllustration.tsx  HeroAuroraBg.tsx  HeroPresenceIconsBg.tsx  Hourglass.tsx  Primitives.tsx  WaitBackground.tsx
app/lib/: api.ts  wc.ts
app/ui/: theme.ts
components/: Collapsible.tsx  ExternalLink.tsx  HapticTab.tsx  HelloWave.tsx  ParallaxScrollView.tsx  ThemedText.tsx  ThemedView.tsx
components/ui/: IconSymbol.ios.tsx  (+2 more)
lib/: api.ts  postLoginRedirect.ts  push.ts  wc.ts
plugins/: with-queries-subwallet.cjs
poba-api-py/: .env  main.py  requirements.txt
poba_api_py/: .env  config.py  main.py  requirements.txt
(+31 files in other folders)
